SAT-perf_defconfig: Enable F2FS
Signed-off-by: RaghuVarma331 <raghuvarma331@gmail.com>

--- a/arch/arm64/configs/SAT-perf_defconfig
+++ b/arch/arm64/configs/SAT-perf_defconfig
@@ -806,4 +806,11 @@ CONFIG_ICMP_DISABLE_PS=y
 CONFIG_BUILD_TIMESTAMP=y
 CONFIG_WLAN_FEATURE_FILS=y
 CONFIG_QCACLD_FEATURE_METERING=y
-
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
