--- a/arch/arm64/configs/DDV_defconfig
+++ b/arch/arm64/configs/DDV_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.153 Kernel Configuration
+# Linux/arm64 4.4.192 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -543,6 +543,7 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KEYS_COMPAT=y
 
 #
 # Power management options
@@ -1470,8 +1471,6 @@ CONFIG_DM_REQ_CRYPT=y
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
-CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128=y
-CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=128
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -1788,6 +1787,7 @@ CONFIG_WLAN=y
 # CONFIG_PRISM54 is not set
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
+# CONFIG_VIRT_WIFI is not set
 # CONFIG_WIFI_CONTROL_FUNC is not set
 # CONFIG_WCNSS_CORE is not set
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
@@ -1994,6 +1994,17 @@ CONFIG_INPUT_STMVL53L0=y
 # CONFIG_SILEAD_FP is not set
 CONFIG_SUNWAVE_FP=y
 CONFIG_CDFINGER_FP=y
+# CONFIG_BOSCH_DRIVER_LOG_FUNC is not set
+# CONFIG_SENSORS_BMA2X2 is not set
+# CONFIG_SENSORS_BMG is not set
+# CONFIG_SENSORS_YAS537 is not set
+# CONFIG_SENSORS_BMM050 is not set
+# CONFIG_SENSORS_AKM09911 is not set
+# CONFIG_SENSORS_AKM09912 is not set
+# CONFIG_SENSORS_BMA420 is not set
+# CONFIG_SENSORS_BMA421 is not set
+# CONFIG_SENSORS_BMA422 is not set
+# CONFIG_SENSORS_BMA455 is not set
 
 #
 # Hardware I/O ports
@@ -2023,6 +2034,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
+CONFIG_LDISC_AUTOLOAD=y
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 
@@ -2076,7 +2088,6 @@ CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_HW_RANDOM_MSM is not set
-# CONFIG_R3964 is not set
 # CONFIG_APPLICOM is not set
 
 #
@@ -2743,6 +2754,7 @@ CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_MEMOPS=y
 CONFIG_VIDEOBUF2_VMALLOC=y
+# CONFIG_V4L2_LOOPBACK is not set
 CONFIG_DVB_CORE=y
 CONFIG_DVB_NET=y
 # CONFIG_TTPCI_EEPROM is not set
@@ -3665,6 +3677,7 @@ CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
 CONFIG_USB_CONFIGFS_UEVENT=y
 # CONFIG_USB_CONFIGFS_F_UAC1 is not set
+# CONFIG_USB_CONFIGFS_F_UAC1_LEGACY is not set
 # CONFIG_USB_CONFIGFS_F_UAC2 is not set
 CONFIG_USB_CONFIGFS_F_MIDI=y
 CONFIG_USB_CONFIGFS_F_HID=y
@@ -3776,6 +3789,7 @@ CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH_V2=y
 CONFIG_LEDS_QPNP_WLED=y
 CONFIG_LEDS_SYSCON=y
+# CONFIG_LEDS_QPNP_HAPTICS is not set
 
 #
 # LED Triggers
@@ -4069,8 +4083,6 @@ CONFIG_ION=y
 # CONFIG_ION_DUMMY is not set
 CONFIG_ION_MSM=y
 # CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS is not set
-# CONFIG_FIQ_DEBUGGER is not set
-# CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 # CONFIG_LTE_GDM724X is not set
@@ -4083,6 +4095,46 @@ CONFIG_ION_MSM=y
 # CONFIG_FSL_MC_BUS is not set
 # CONFIG_WILC1000_DRIVER is not set
 # CONFIG_MOST is not set
+
+#
+# Qualcomm Atheros CLD WLAN module
+#
+CONFIG_QCA_CLD_WLAN=y
+CONFIG_QCACLD_WLAN_LFR3=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_WLAN_FEATURE_LPSS=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_QCACLD_FEATURE_NAN=y
+CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
+CONFIG_QCACLD_FEATURE_GREEN_AP=y
+CONFIG_QCACLD_FEATURE_METERING=y
+CONFIG_HELIUMPLUS=y
+CONFIG_64BIT_PADDR=y
+CONFIG_QCOM_TDLS=y
+CONFIG_QCOM_LTE_COEX=y
+CONFIG_MPC_UT_FRAMEWORK=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_FEATURE_TSO=y
+# CONFIG_FEATURE_TSO_DEBUG is not set
+CONFIG_WLAN_FASTPATH=y
+CONFIG_WLAN_NAPI=y
+# CONFIG_WLAN_NAPI_DEBUG is not set
+CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
+CONFIG_WLAN_SYNC_TSF=y
+CONFIG_LFR_SUBNET_DETECTION=y
+CONFIG_MCC_TO_SCC_SWITCH=y
+CONFIG_QCACLD_WLAN_LFR2=y
+CONFIG_WLAN_FEATURE_DISA=y
+# CONFIG_WLAN_FEATURE_OWE is not set
+# CONFIG_WLAN_FEATURE_GMAC is not set
+# CONFIG_WLAN_FEATURE_SAE is not set
+CONFIG_ICMP_DISABLE_PS=y
+CONFIG_BUILD_TIMESTAMP=y
+# CONFIG_WLAN_FEATURE_SARV1_TO_SARV2 is not set
+CONFIG_WLAN_FEATURE_FILS=y
+# CONFIG_WLAN_FEATURE_PKT_CAPTURE is not set
+# CONFIG_QCA_CLD_DEBUG is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -4107,6 +4159,7 @@ CONFIG_MSM_11AD=m
 CONFIG_SEEMP_CORE=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_EXT_DISPLAY=y
+# CONFIG_SDIO_QCN is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -4244,6 +4297,7 @@ CONFIG_MSM_SPM=y
 # CONFIG_MSM_L2_SPM is not set
 CONFIG_QCOM_SCM=y
 # CONFIG_QCOM_SCM_QCPE is not set
+# CONFIG_QCOM_EARLY_DOMAIN is not set
 # CONFIG_QCOM_SCM_XPU is not set
 # CONFIG_QCOM_SCM_ERRATA is not set
 CONFIG_QCOM_WATCHDOG_V2=y
@@ -4300,6 +4354,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_QCOM_CX_IPEAK=y
 # CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_CE is not set
 # CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_UE is not set
+# CONFIG_MFSE_QMI is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
@@ -4472,6 +4527,8 @@ CONFIG_QCOM_TADC=y
 # CONFIG_ADIS16480 is not set
 # CONFIG_KMX61 is not set
 # CONFIG_INV_MPU6050_IIO is not set
+# CONFIG_INV_MPU_IIO_I2C is not set
+# CONFIG_INV_MPU_IIO_SPI is not set
 
 #
 # Light sensors
@@ -4613,6 +4670,7 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 #
 CONFIG_ARM_PSCI_FW=y
 # CONFIG_FIRMWARE_MEMMAP is not set
+# CONFIG_ISCSI_IBFT is not set
 CONFIG_QCOM_SCM_64=y
 CONFIG_HAVE_ARM_SMCCC=y
 CONFIG_MSM_TZ_LOG=y
@@ -4983,6 +5041,7 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_TEST_PRINTF is not set
 # CONFIG_TEST_RHASHTABLE is not set
+# CONFIG_TEST_HASH is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_USER_COPY is not set
@@ -4992,6 +5051,7 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_MEMTEST is not set
 # CONFIG_TEST_STATIC_KEYS is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
@@ -5013,7 +5073,6 @@ CONFIG_DEBUG_ALIGN_RODATA=y
 # Security options
 #
 CONFIG_KEYS=y
-CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 CONFIG_ENCRYPTED_KEYS=y
@@ -5160,7 +5219,6 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_CHACHA20 is not set
 # CONFIG_CRYPTO_SEED is not set
 # CONFIG_CRYPTO_SERPENT is not set
-# CONFIG_CRYPTO_SPECK is not set
 # CONFIG_CRYPTO_TEA is not set
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
@@ -5225,7 +5283,6 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
-# CONFIG_CRYPTO_SPECK_NEON is not set
 CONFIG_BINARY_PRINTF=y
 
 #
@@ -5291,34 +5348,3 @@ CONFIG_OID_REGISTRY=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
-#
-# Qualcomm Atheros CLD WLAN module
-#
-CONFIG_QCA_CLD_WLAN=y
-CONFIG_QCACLD_WLAN_LFR3=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_WLAN_FEATURE_LPSS=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_QCACLD_FEATURE_NAN=y
-CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
-CONFIG_QCACLD_FEATURE_GREEN_AP=y
-CONFIG_HELIUMPLUS=y
-CONFIG_64BIT_PADDR=y
-CONFIG_QCOM_TDLS=y
-CONFIG_QCOM_LTE_COEX=y
-CONFIG_MPC_UT_FRAMEWORK=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_FEATURE_TSO=y
-CONFIG_WLAN_FASTPATH=y
-CONFIG_WLAN_NAPI=y
-CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
-CONFIG_WLAN_SYNC_TSF=y
-CONFIG_LFR_SUBNET_DETECTION=y
-CONFIG_MCC_TO_SCC_SWITCH=y
-CONFIG_QCACLD_WLAN_LFR2=y
-CONFIG_WLAN_FEATURE_DISA=y
-CONFIG_ICMP_DISABLE_PS=y
-CONFIG_BUILD_TIMESTAMP=y
-CONFIG_WLAN_FEATURE_FILS=y
-CONFIG_QCACLD_FEATURE_METERING=y
